//
//  INTEL CONFIDENTIAL
//
//  Copyright (C) 2023 Intel Corporation
//
//  This software and the related documents are Intel copyrighted materials, and
// your use of them is governed by the express license under which they were
// provided to you ("License"). Unless the License provides otherwise, you may
// not use, modify, copy, publish, distribute, disclose or transmit this
// software or the related documents without Intel's prior written permission.
//
//  This software and the related documents are provided as is, with no express
// or implied warranties, other than those that are expressly stated in the
// License.
//

syntax = "proto2";
package mediapipe;

import "mediapipe/framework/calculator.proto";

message OverlayLabel {
  required string id = 1;
  required string name = 2;
  required string color = 3;
  required bool is_empty = 4;
}

message OverlayCalculatorOptions {
  extend mediapipe.CalculatorOptions {
      optional OverlayCalculatorOptions ext = 125115991;
  }
  repeated OverlayLabel labels = 1;
  optional double stroke_width = 2;
  optional double opacity = 3;
  optional double font_size = 4;
}
